namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-dev
  labels:
    app: portfolio
