deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
  name: portfolio-frontend
  namespace: portfolio-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: aravind1843/portfolio:7c1710434c9744a8b3cf5bbde25d75789db17d6f
        name: portfolio
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
status: {}
