service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
  namespace: portfolio-dev
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - port: 8080
      targetPort: 80
